--- a/responsive-design-example/main.css
+++ b/responsive-design-example/main.css
@@ -1,8 +1,8 @@
-.column{
-    float: left;
-    width: 100%;
-    height: 50px;
-    background-color: #000;
-    
-    
+.header {
+    position:fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: #e84610;
+    padding: 15px 25px ;
 }
